Big recipe overhaul, compiles