@@ -3,47 +3,57 @@ package net.sievert.jolcraft.datagen.recipe;
 import net.minecraft.MethodsReturnNonnullByDefault;
 import net.minecraft.advancements.Advancement;
 import net.minecraft.advancements.AdvancementHolder;
+import net.minecraft.core.HolderGetter;
 import net.minecraft.core.HolderLookup;
+import net.minecraft.core.registries.Registries;
 import net.minecraft.data.PackOutput;
 import net.minecraft.data.recipes.RecipeOutput;
 import net.minecraft.data.recipes.RecipeProvider;
 import net.minecraft.resources.ResourceKey;
+import net.minecraft.world.item.Item;
 import net.minecraft.world.item.crafting.Recipe;
 import net.neoforged.neoforge.common.conditions.ICondition;
+import net.sievert.jolcraft.datagen.recipe.bridge.RecipeEmissionExecutor;
 import net.sievert.jolcraft.datagen.recipe.subprovider.*;
-import net.sievert.jolcraft.datagen.recipe.util.AbstractRecipeProvider;
-import net.sievert.jolcraft.datagen.recipe.util.RecipeValidation;
 import net.sievert.jolcraft.util.JolCraftLogTags;
 import net.sievert.jolcraft.util.JolCraftLogs;
 
 import javax.annotation.Nullable;
 import javax.annotation.ParametersAreNonnullByDefault;
-import java.util.Collections;
-import java.util.LinkedHashMap;
+import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CompletableFuture;
 
 @ParametersAreNonnullByDefault
 @MethodsReturnNonnullByDefault
-public final class JolCraftRecipeProvider extends AbstractRecipeProvider {
+public final class JolCraftRecipeProvider extends RecipeProvider {
 
-    @Nullable
-    private final CountingCollectingRecipeOutput counting;
-
-    public JolCraftRecipeProvider(HolderLookup.Provider provider, RecipeOutput recipeOutput) {
-        super(provider, recipeOutput);
-        this.counting = (recipeOutput instanceof CountingCollectingRecipeOutput c) ? c : null;
+    public JolCraftRecipeProvider(
+            HolderLookup.Provider provider,
+            RecipeOutput output
+    ) {
+        super(provider, output);
     }
 
     public static final class Runner extends RecipeProvider.Runner {
-        public Runner(PackOutput packOutput, CompletableFuture<HolderLookup.Provider> provider) {
+        public Runner(
+                PackOutput packOutput,
+                CompletableFuture<HolderLookup.Provider> provider
+        ) {
             super(packOutput, provider);
         }
 
         @Override
-        protected RecipeProvider createRecipeProvider(HolderLookup.Provider provider, RecipeOutput recipeOutput) {
-            return new JolCraftRecipeProvider(provider, new CountingCollectingRecipeOutput(recipeOutput));
+        protected RecipeProvider createRecipeProvider(
+                HolderLookup.Provider provider,
+                RecipeOutput recipeOutput
+        ) {
+            return new JolCraftRecipeProvider(
+                    provider,
+                    new CountingRecipeOutput(recipeOutput)
+            );
         }
 
         @Override
@@ -54,83 +64,74 @@ public final class JolCraftRecipeProvider extends AbstractRecipeProvider {
 
     @Override
     protected void buildRecipes() {
-        List<RecipeSubProvider> subs = List.of(
-                new CompassRecipesSubProvider(),
-                new DwarfBountyRecipesSubProvider(),
-                new DwarfTradeRecipesSubProvider(),
-                new EquipmentRecipesSubProvider(),
-                new FermentingCauldronRecipesSubProvider(),
-                new LapidaryRecipesSubProvider(),
-                new MaterialRecipesSubProvider(),
-                new MiscRecipesSubProvider(),
-                new ToolRecipesSubProvider(),
-                new TrimRecipesSubProvider()
-        );
 
-        if (counting == null) {
-            runAll(subs);
-            return;
-        }
+        CountingRecipeOutput counting = (CountingRecipeOutput) this.output;
 
-        int beforeTotal = counting.count();
+        RecipeEmissionExecutor root = new RecipeEmissionExecutor(counting);
+
+        List<RecipeSubProvider> subs = new ArrayList<>();
+        subs.add(new CompassRecipesSubProvider());
+        subs.add(new DwarfBountyRecipesSubProvider());
+        subs.add(new DwarfTradeRecipesSubProvider());
+        subs.add(new EquipmentRecipesSubProvider());
+        subs.add(new FermentingCauldronRecipesSubProvider());
+        subs.add(new HandInteractionRecipesSubProvider());
+        subs.add(new LapidaryRecipesSubProvider());
+        subs.add(new MaterialRecipesSubProvider());
+        subs.add(new MiscRecipesSubProvider());
+        subs.add(new ToolRecipesSubProvider());
+        subs.add(new TrimRecipesSubProvider());
+
+
+        HolderGetter<Item> items = this.registries.lookupOrThrow(Registries.ITEM);
 
         for (RecipeSubProvider sub : subs) {
-            int before = counting.count();
-            String name = sub.getClass().getSimpleName();
-
-            try {
-                sub.addRecipes(this);
-            } catch (RuntimeException e) {
-                JolCraftLogs.error(
-                        JolCraftLogTags.DATAGEN,
-                        "Recipe subprovider {} failed.",
-                        e,
-                        name
-                );
-                throw e;
-            }
-            int added = counting.count() - before;
-            JolCraftLogs.debug(JolCraftLogTags.DATAGEN, "Recipe subprovider {}: +{} recipes", name, added);
-
-            if (added == 0) {
-                JolCraftLogs.warn(JolCraftLogTags.DATAGEN, "Recipe subprovider {} added 0 recipes.", name);
-            }
+            sub.registerRecipes(
+                    root.scoped(sub.folder()),
+                    this.output,
+                    items
+            );
         }
 
-        RecipeValidation.validateRecipes(counting.allRecipes());
+        counting.counts().forEach((type, count) ->
+                JolCraftLogs.debug(
+                        JolCraftLogTags.DATAGEN,
+                        "Added {} recipes of type: {}",
+                        count,
+                        type
+                )
+        );
 
-        int totalAdded = counting.count() - beforeTotal;
-        JolCraftLogs.info(JolCraftLogTags.DATAGEN, "Total recipes generated: {} ({} subproviders)", totalAdded, subs.size());
+        JolCraftLogs.info(
+                JolCraftLogTags.DATAGEN,
+                "Total recipes generated: {}",
+                counting.total()
+        );
     }
 
-    private static final class CountingCollectingRecipeOutput implements RecipeOutput {
+    // =====================================================
+    // Counting wrapper
+    // =====================================================
+
+    private static final class CountingRecipeOutput implements RecipeOutput {
 
         private final RecipeOutput delegate;
-        private int count;
 
-        private final Map<ResourceKey<Recipe<?>>, Recipe<?>> recipes = new LinkedHashMap<>();
+        private final Map<String, Integer> perType = new HashMap<>();
+        private final Map<ResourceKey<Recipe<?>>, Recipe<?>> seen = new HashMap<>();
 
-        private CountingCollectingRecipeOutput(RecipeOutput delegate) {
+        private int total = 0;
+
+        private CountingRecipeOutput(RecipeOutput delegate) {
             this.delegate = delegate;
         }
 
-        private int count() {
-            return count;
+        int total() {
+            return total;
         }
 
-        public Map<ResourceKey<Recipe<?>>, Recipe<?>> allRecipes() {
-            return Collections.unmodifiableMap(recipes);
-        }
-
-        public <T extends Recipe<?>> Map<ResourceKey<Recipe<?>>, T> recipesOfType(Class<T> type) {
-            Map<ResourceKey<Recipe<?>>, T> out = new LinkedHashMap<>();
-            for (var e : recipes.entrySet()) {
-                Recipe<?> r = e.getValue();
-                if (type.isInstance(r)) {
-                    out.put(e.getKey(), type.cast(r));
-                }
-            }
-            return Collections.unmodifiableMap(out);
+        Map<String, Integer> counts() {
+            return Map.copyOf(perType);
         }
 
         @Override
@@ -140,9 +141,21 @@ public final class JolCraftRecipeProvider extends AbstractRecipeProvider {
                 @Nullable AdvancementHolder advancement,
                 ICondition... conditions
         ) {
-            count++;
-            recipes.put(key, recipe);
+
+            if (seen.containsKey(key)) {
+                throw new IllegalStateException(
+                        "Duplicate recipe id detected: " + key.location()
+                );
+            }
+
+            seen.put(key, recipe);
+
             delegate.accept(key, recipe, advancement, conditions);
+
+            String type = recipe.getSerializer().toString();
+
+            perType.merge(type, 1, Integer::sum);
+            total++;
         }
 
         @Override
